# cbam_pilot_ai

./: .gitignore  README.MD  demo.csv  final_test.csv  test.csv  test1.csv
backend/: main.py  pyproject.toml  requirements.txt
backend/api/: main.py
backend/data/: Nomenclature_EN.xlsx  cbam_hscode.csv  cbam_hscode_format.xlsx  cbam_master_2026.csv  demo1.csv  hs_code.csv
backend/graph/: nodes.py  pipeline.py  state.py
backend/models/: schemas.py
backend/rag/: ingest.py  query.py
backend/services/: annex.py  classification.py  cost_engine.py  emissions.py  ets.py  hs_lookup.py
frontend/: index.html
frontend/src/: App.jsx
frontend/src/components/: Classificationresult.jsx  Dashboard.jsx  UploadForm.jsx
